--- a/styles.css
+++ b/styles.css
@@ -14,14 +14,11 @@ ul {
 }
 
 .horizontal-navbar{
-    display: inline;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    display: flex;
 }
 
-.horizontal-navbar li a{
-    display: inline-block;
-    width: 50px;
-
+.navbar-item{
+    border: 5px solid black;
+    margin: 10px;
+    padding: 10px; 
 }
