--- a/styles.css
+++ b/styles.css
@@ -22,12 +22,13 @@ ul {
     list-style-type: none;
 }
 
-.horizontal-navbar{
-    display: flex;
+.navbar {
+    display:flex;
 }
 
 .navbar-item{
     border: 5px solid black;
     margin: 10px;
     padding: 10px; 
+    flex: 1;
 }
