Create border class for containers
Creation of 'solid black border' class that will be utilized in all subsections for design and test purposes

--- a/styles.css
+++ b/styles.css
@@ -27,13 +27,24 @@ ul {
 }
 
 .navbar-item{
-    border: 5px solid black;
-    margin: 10px;
     padding: 10px; 
     flex: 1;
 }
 
 .role {
-    border: 5px solid black; 
+
+}
+
+.project{
+
+}
+
+.link{
+    
+}
+
+.solid-black-border{
+    border: 5px solid black;
     margin: 5px;
+    padding: 5px;
 }
