Hide all project and job overviews
Switch all the unordered lists and list items to div's to standardize alignment. Additionally add the hidden class to the job and project descriptions as well as the tech stack that was utilized.

--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,11 @@ ul {
 }
 
 .navbar-item{
-    text-align: center;
     font-weight: bold;
+}
+
+.navbar-item-title {
+    text-align: left;
 }
 
 .title{
