Add purple border around each of the major sections
Addition of a purple border class to both the html file and the css document. This class will likely be used in the final formatting of the website and not merely used as a testing/formatting class

--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,12 @@ ul {
     font-weight: bold;
 }
 
+.solid-purple-border{
+    border: 5px solid rgb(71,33,131);
+    margin: 5px;
+    padding: 2px;
+}
+
 .detail-toggle{
     /*
     The purpose of this class is for it to either display or hide the contents contained in the <p> element directly beneath.
