--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,23 @@
 
 
 * {
-    color: rgb(71,33,131);
+    color: rgb(241,246,245); 
 }
 
 .purple-background{
-    background-color: rgb(71,33,131);
+    background-color: #58287F;
+}
+
+.black-background{
+    background-color: #1A0000;
+}
+
+.blue-background{
+    background-color: #89C4E1;
+}
+
+.white-background {
+    background-color: #F5EDCE;
 }
 .white-font{
     color: rgb(241,246,245); 
@@ -38,14 +50,12 @@ nav{
 
 .navbar-item{
     font-weight: bold;
-
     border: 2px solid rgb(241,246,245);
     padding: 10px;
     margin: 5px;
-
 }
 
-.navbar-item > li{
+.navbar-item > a{
     text-align: center;
 }
 
@@ -73,9 +83,4 @@ ul {
     font-weight: bold;
 }
 
-.solid-purple-border{
-    border: 5px solid rgb(71,33,131);
-    margin: 5px;
-    padding: 2px;
-}
 
