--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,9 @@
 .white-font{
     color: rgb(241,246,245); 
 }
+.black-font{
+    color: #1A0000;
+}
 
 .container{
     display: flex;
@@ -63,11 +66,6 @@ header {
     text-align: center;
     margin:0px;
 }
-
-ul {
-    list-style-type: none;
-}
-
 
 .hidden {
     display: none;
