Navbar items take up entire width
The width of the navbar items were updated to take up the entire width of the webpage

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ nav{
 
 .navbar-item{
     font-weight: bold;
+    flex: 1;
     border: 2px solid rgb(241,246,245);
     padding: 10px;
     margin: 5px;
