--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-:root{
-    --red: E63946;
-    --white: F1FAEE;
-    --light_blue: A8DADC;
-    --blue: 457B9D;
-    --dark_blue: 1D3557;
-}
 
 
 * {
@@ -35,21 +28,19 @@
 
 .container{
     display: flex;
-    justify-content: space-around;
-}
-
-.vertical-section{
-    flex: 1;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
-   
+    flex: 1;
 }
 
-nav{
-    display:flex;
+
+.navbar {
+    display: flex;
     list-style-type:none;
-    justify-content:center;
-  
-}
+    flex: 1;
+  }
+
 
 .navbar-item{
     font-weight: bold;
@@ -57,15 +48,10 @@ nav{
     border: 2px solid rgb(241,246,245);
     padding: 10px;
     margin: 5px;
-}
-
-.navbar-item > a{
     text-align: center;
-}
+    justify-content: center;
+    align-items: center;
 
-header {
-    text-align: center;
-    margin:0px;
 }
 
 .hidden {
