--- a/styles_v2.css
+++ b/styles_v2.css
@@ -1,5 +1,5 @@
 html {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gloock', serif;
     -ms-text-size-adjust:100%;
     -webkit-text-size-adjust:100%;
     color: #6320EE;
