Add dropdown menu with default blank value
Add dropdown menu with a default value that is blank

--- a/pomodoro/styles.css
+++ b/pomodoro/styles.css
@@ -4,3 +4,9 @@
     margin: 5px;
     padding: 5px;
 }
+
+html{
+    font-family: 'Gloock', serif;
+    -ms-text-size-adjust:100%;
+    -webkit-text-size-adjust:100%;
+}
