Add numeric inputs for study relax times
implemented 2 inputs for the study and relax periods of the pomodoro application.

--- a/pomodoro/styles.css
+++ b/pomodoro/styles.css
@@ -10,3 +10,17 @@ html{
     -ms-text-size-adjust:100%;
     -webkit-text-size-adjust:100%;
 }
+
+.columnFlex{
+    display: flex;
+    flex-direction: column;
+}
+
+.subFlex{
+    flex:1;
+
+}
+
+.centerText{
+    text-align: center;
+}
