--- a/pomodoro/styles.css
+++ b/pomodoro/styles.css
@@ -1,6 +1,4 @@
 * {
-    background-color: plum;
-    border: 2px solid palevioletred;
     margin: 5px;
     padding: 5px;
 }
@@ -9,6 +7,31 @@ html{
     font-family: 'Gloock', serif;
     -ms-text-size-adjust:100%;
     -webkit-text-size-adjust:100%;
+}
+
+.light-blue-background{
+    background-color: rgb(189, 224, 254);
+}
+
+.blue-background{
+    background-color: rgb(162, 210, 255);
+}
+
+.light-pink-background{
+    background-color: rgb(255, 200, 221);
+}
+
+.pink-background{
+    background-color: rgb(255, 175, 204);
+}
+
+.purple-background{
+    background-color: rgb(205, 180, 219);
+}
+
+
+nav a{
+    border: 2px solid rgb(255, 175, 204);
 }
 
 .columnFlex{
