Add placeholder to add tasks to complete
Addition of 'task' section to webpage where a user will be able to add tasks that they want to complete

--- a/pomodoro/styles.css
+++ b/pomodoro/styles.css
@@ -30,6 +30,18 @@ html{
     flex:1;
 }
 
-.centerText{
+.center-text{
     text-align: center;
+}
+
+.light-border{
+    border: 2px solid var(--main-light-color);
+}
+
+#task{
+    background-color: rgba(255, 255, 255, .3);
+}
+
+#task-div{
+    border-top: 5px solid var(--main-light-color);;
 }
