Right align remove task sign

--- a/pomodoro/styles.css
+++ b/pomodoro/styles.css
@@ -26,6 +26,15 @@ html{
     justify-content: center;
 }
 
+.row-flexbox-container{
+    display:flex;
+    flex-direction:row;
+}
+
+.flexbox-item-ra{
+    margin-left: auto;
+  }
+
 .flexbox-item{
     flex:1;
 }
