Add section to which new wishlist items will be added to
Addition of the #wishlist section to hold the new wishlist items moving forward

--- a/wishlist/styles.css
+++ b/wishlist/styles.css
@@ -55,5 +55,20 @@ ul{
     padding: 10px;
 }
 
+.sub-category{
+    font-size: medium;
+}
+
+.sub-category-item{
+    font-size: small;
+}
+
+.section-header{
+    font-size: x-large;
+}
+
+#title{
+    font-size: xx-large;
+}
 
 
