--- a/spotify/styles.css
+++ b/spotify/styles.css
@@ -35,14 +35,14 @@ button {
     color: black;
     border: none;
     border-radius: 50px;
-    padding: 10px 20px;
     font-weight: bold;
-    font-size: 14px;
+    font-size: .75rem;
     text-transform: uppercase;
-    letter-spacing: 2px;
+    letter-spacing: .01rem;
     cursor: pointer;
     width: 5rem;
     height: 5rem;
+    text-align: center;
 
   }
 
@@ -59,5 +59,5 @@ button:hover {
 .slider__input {
     width: 50%;
   }
-  
+
  
