Add Spotify Branding
Addition of the spotify logo in the top right corner.

--- a/spotify/styles.css
+++ b/spotify/styles.css
@@ -60,4 +60,15 @@ button:hover {
     width: 50%;
   }
 
+.logo-container{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+
+#logo{
+    max-width: 20%;
+    height: auto;
+    margin-left: auto;
+}
  
