Design Header to be responsive

--- a/spotify/styles.css
+++ b/spotify/styles.css
@@ -9,17 +9,16 @@ body{
     border: 2px solid white;
 }
 
-.profile-pic, .listener-profile-pic{
-    border-radius: 50%;
-}
-
-.centered, .listener-name {
+#title{
     text-align: center;
+    font-size: 2rem;
+    margin-bottom: 0rem;
 }
 
-.row-flex{
-    display: flex;
-    flex-direction: row;
+#slogan{
+    text-align: center;
+    font-size: 1rem;
+    margin-top: 0rem;
 }
 
 .column-flex{
@@ -27,71 +26,11 @@ body{
     flex-direction: column;
 }
 
-.flex-item{
-    flex: 1;
-}
-
-button {
-    background-color: white;
-    color: black;
-    border: none;
-    border-radius: 50px;
-    font-weight: bold;
-    font-size: .75rem;
-    text-transform: uppercase;
-    letter-spacing: .01rem;
-    cursor: pointer;
-    width: 5rem;
-    height: 5rem;
-    text-align: center;
-
-  }
-
-button:hover {
-    background-color: #1DB954;
-    color: white;
-}
-
-.song{
-    width: 8rem;
-    height: 8rem;
-}
-
-.slider__input {
-    width: 50%;
-  }
-
-.logo-container{
+.row-flex{
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
+    flex-direction: row;
 }
 
-#logo{
-    max-width: 20%;
-    height: auto;
-    margin-left: auto;
-}
-
-.profile-pic-container{
-    display: flex;
-    width: 10rem;
-    height: 10rem;
-    border-radius: 50%;
-    overflow: hidden;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-
-  }
-
-  .profile-pic-container img {
-    flex: 1;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-  }
 
 
 
